1-30-09: #1145, add version timestamp to project properties file
1-30-09: create abstraction for project properties file
1-30-09: created change log file