@@ -1,3 +1,5 @@
+1-31-09: #1171, BuildPropertiesFile abstraction of build properties file
+1-31-08: #1145, ProjectPropertiesFile abstraction of project properties file
 1-30-09: #1145, add version timestamp to project properties file
 1-30-09: create abstraction for project properties file
 1-30-09: created change log file
